--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@
     margin-right: 20px;
     margin-left: 3px;
     color:aliceblue;
+    text-decoration: none;
 
 }
 
@@ -68,6 +69,7 @@
 }
 .trend1_1 {
     color: white;
+    text-decoration: none;
 }
 
 
